Fix: robust JWT parsing and CORS handling (prevent frontend 403/CORS)